# GPT-3-Experimentation-Framework

./: README.md  Ui.py  pyproject.toml
.github/workflows/: build-action.yml
GPT-3/: pyproject.toml
pages/: 02_Experiments.py  03_Models.py  Experimets.py  Models.py
