[tool.poetry]
name = "gpt-3"
version = "0.1.0"
description = ""
authors = ["CYINT <info@cyint.technology>"]
readme = "README.md"
packages = [{include = "gpt_3"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.23.0"
streamlit = "^1.13.0"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
